# HILLEL_CPP.PRO_HW.8

./: .gitignore  CMakeLists.txt  HW_08.cpp  MySharedPtr.h  MySharedPtr.hpp
